[package]
name = "projector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.0.8", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
